# drag-rs

crates/drag/: Cargo.toml
crates/drag/src/platform_impl/macos/: mod.rs
crates/drag/src/platform_impl/windows/: mod.rs
crates/tauri-plugin-drag/: Cargo.toml
crates/tauri-plugin-drag-as-window/: Cargo.toml
crates/tauri-plugin-drag/src/: lib.rs
examples/tao/: Cargo.toml
examples/tauri/: Cargo.toml  index.html  tauri.conf.json
examples/tauri-dragout/: Cargo.toml  index.html  new_window.html  tauri.conf.json
examples/tauri/src/: main.rs
examples/wry/: Cargo.toml
examples/wry-dragout/: Cargo.toml
examples/wry-dragout/src/: main.rs
