[package]
name = "tauri-app-dragout"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0-beta"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-drag-as-window = { path = "../../crates/tauri-plugin-drag-as-window/", features = [
  "global-js",
] }
