[package]
name = "tauri-dragout-app"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-drag-as-window = { path = "../../crates/tauri-plugin-drag-as-window/", features = [
    "global-js",
] }
